<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res/net.ilifang.app.pmc"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/main_fragment"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
        </FrameLayout>

        <RadioGroup
            android:id="@+id/tab_menu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_menu_bg"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <RadioButton
                android:id="@+id/menu_home"
                style="@style/menu_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/menu_selector_home"
                android:text="@string/lbl_menu_home" />

            <RadioButton
                android:id="@+id/menu_application"
                style="@style/menu_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/menu_selector_application"
                android:text="@string/lbl_menu_application" />

            <RadioButton
                android:id="@+id/menu_project"
                style="@style/menu_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/menu_selector_project"
                android:text="@string/lbl_menu_project" />

            <RadioButton
                android:id="@+id/menu_chat"
                style="@style/menu_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/menu_selector_chat"
                android:text="@string/lbl_menu_chat" />
        </RadioGroup>
    </LinearLayout>

    <net.ilifang.app.commons.widget.PathView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mPathView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="64dp"
        android:paddingRight="20dp" >
    </net.ilifang.app.commons.widget.PathView>

</FrameLayout>