<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="60dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="70dp" >

    <ImageView
        android:id="@+id/image_face_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="110dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@null"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_face_slogan"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_login_user_id"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/hint_user_name"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="32dp"
            android:background="#6C6074"
            android:padding="0dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:padding="0dp" />

        <EditText
            android:id="@+id/edt_user_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_login_user_pwd"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/hint_user_pwd"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="16dp" >
        </EditText>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="32dp"
            android:background="#6C6074"
            android:padding="0dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:padding="0dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/common_button_matched"
            android:text="@string/lbl_login_txt"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:padding="0dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/lbl_login_tip"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>