<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <ImageView
            android:id="@+id/item1_enter"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:contentDescription="@null"
            android:src="@drawable/go" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/item1_enter"
            android:drawableLeft="@drawable/ic_setting_user_info"
            android:drawablePadding="5dp"
            android:text="@string/lbl_user_info"
            android:textColor="@color/headColor"
            android:textSize="16dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/dark_gray" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <CheckBox
            android:id="@+id/item2_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/check_status"
            android:button="@null"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/item2_switch"
            android:drawableLeft="@drawable/ic_setting_voice"
            android:drawablePadding="5dp"
            android:text="@string/lbl_voice_settings"
            android:textColor="@color/headColor"
            android:textSize="16dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <CheckBox
            android:id="@+id/item3_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/check_status"
            android:button="@null"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/item3_switch"
            android:drawableLeft="@drawable/ic_setting_shake"
            android:drawablePadding="5dp"
            android:text="@string/lbl_shake_settings"
            android:textColor="@color/headColor"
            android:textSize="16dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <ImageView
            android:id="@+id/item4_enter"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:contentDescription="@null"
            android:src="@drawable/go" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/item4_enter"
            android:drawableLeft="@drawable/ic_setting_about"
            android:drawablePadding="5dp"
            android:text="@string/lbl_about"
            android:textColor="@color/headColor"
            android:textSize="16dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/dark_gray" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <ImageView
            android:id="@+id/item5_enter"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:contentDescription="@null"
            android:src="@drawable/go" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/item5_enter"
            android:drawableLeft="@drawable/ic_setting_user_pwd"
            android:drawablePadding="5dp"
            android:text="@string/lbl_user_pwd_setting"
            android:textColor="@color/headColor"
            android:textSize="16dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <ImageView
            android:id="@+id/item6_enter"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:contentDescription="@null"
            android:src="@drawable/go" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/item6_enter"
            android:drawableLeft="@drawable/ic_setting_feedback"
            android:drawablePadding="5dp"
            android:text="@string/lbl_feedback_setting"
            android:textColor="@color/headColor"
            android:textSize="16dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp" >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_span="2"
            android:background="@drawable/common_button_red"
            android:text="@string/lbl_logout_txt"
            android:textColor="@android:color/white"
            android:textSize="18dp" />
    </LinearLayout>

</LinearLayout>