<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="0dp"
    android:background="@color/dark_gray"
    android:orientation="vertical"
    android:padding="0dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="@color/dark_gray"
        android:padding="5dp" >

        <TextView
            android:id="@+id/lbl_appinfo_type"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@drawable/label_round_without_border"
            android:drawableRight="@drawable/action_down"
            android:padding="8dp"
            android:text="切换项目"
            android:textColor="@color/headColor"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edt_appinfo_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/label_round_without_border"
            android:hint="@string/lbl_project_hint"
            android:paddingLeft="10dp"
            android:textSize="16dp" >
        </EditText>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="6dp" >

        <TableRow android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:drawableLeft="@drawable/ic_project_principal"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/lbl_project_principal"
                android:textColor="@color/headColor"
                android:textSize="18dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:textSize="18dp" >
            </EditText>
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_line_color" />

        <TableRow android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:drawableLeft="@drawable/ic_project_address"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/lbl_project_address"
                android:textColor="@color/headColor"
                android:textSize="18dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:textSize="18dp" >
            </EditText>
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_line_color" />

        <TableRow android:padding="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:drawableLeft="@drawable/ic_project_participant"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/lbl_project_participant"
                android:textColor="@color/headColor"
                android:textSize="18dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:textSize="18dp" >
            </EditText>
        </TableRow>
    </TableLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:background="@android:color/white"
        android:columnWidth="81dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:padding="4dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />

</LinearLayout>