<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/dark_gray"
        android:gravity="center"
        android:padding="10dp" >

        <TextView
            android:id="@+id/btn_user_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_user_add"
            android:gravity="center"
            android:text="@string/lbl_work_group"
            android:textSize="16dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@id/btn_user_add"
            android:background="@drawable/label_rectangle_with_dark_border" >

            <TextView
                android:id="@+id/txt_search_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_search_dark"
                android:gravity="center"
                android:hint="@string/lbl_search_hint"
                android:textColor="@color/headColor"
                android:textSize="16dp" />

            <net.ilifang.app.commons.widget.contact.ClearEditText
                android:id="@+id/edt_search_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_search_dark"
                android:gravity="center"
                android:hint="@string/lbl_search_hint"
                android:textColor="@color/headColor"
                android:textSize="16dp"
                android:visibility="gone" />
        </FrameLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/list_divider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp" >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:gravity="right"
            android:src="@drawable/ic_new_friend" />

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dip"
            android:gravity="center_vertical"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:text="@string/lbl_find_new_friend"
            android:textColor="@color/headColor"
            android:textSize="16dp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/title_layout_no_friends"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_gravity="right|top"
            android:background="#E0E0E0"
            android:gravity="center_vertical"
            android:text="没有匹配的联系人"
            android:textColor="#454545"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_gravity="right|top"
            android:background="#ff303030"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title_layout_catalog"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#E0E0E0"
                android:paddingBottom="5dip"
                android:paddingLeft="5dip"
                android:paddingTop="5dip"
                android:textColor="#454545" />
        </LinearLayout>

        <TextView
            android:id="@+id/dialog"
            android:layout_width="80.0dip"
            android:layout_height="80.0dip"
            android:layout_gravity="center"
            android:background="@drawable/show_head_toast_bg"
            android:gravity="center"
            android:textColor="#ffffffff"
            android:textSize="30.0dip"
            android:visibility="invisible" />

        <net.ilifang.app.commons.widget.contact.SideBar
            android:id="@+id/sidrbar"
            android:layout_width="30.0dip"
            android:layout_height="fill_parent"
            android:layout_gravity="right|center" />

        <ListView
            android:id="@+id/country_lvcountry"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@null" >
        </ListView>

    </FrameLayout>

</LinearLayout>